feat: tighten prompt/output and add one-click copy

--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
       </section>
 
       <section class="card">
-        <h2>生成结果</h2>
+        <div class="section-head">
+          <h2>生成结果</h2>
+          <button id="copyBtn" type="button" class="ghost">一键复制</button>
+        </div>
         <p id="status" class="muted">等待生成…</p>
         <article id="result" class="result"></article>
       </section>
