refactor: remove compare/current-axis panel; show axis long text inline and keep right side for selected option details

--- a/index.html
+++ b/index.html
@@ -57,20 +57,9 @@
 
         <aside class="panel right" id="insightPanel">
           <div class="section-head">
-            <h2>当前轴解释</h2>
-            <span id="activeAxisBadge" class="chip">-</span>
-          </div>
-          <article id="currentAxisInfo" class="selected-explain"></article>
-
-          <div class="section-head top-gap">
-            <h2>你选中的要素卡</h2>
+            <h2>你选中的要素动态解释</h2>
           </div>
           <article id="selectedExplain" class="selected-explain"></article>
-
-          <div class="section-head top-gap">
-            <h2>固定对比（最多2项）</h2>
-          </div>
-          <article id="comparePanel" class="selected-explain"></article>
 
           <div class="section-head top-gap">
             <h2>设计原则（静态）</h2>
