--- a/index.html
+++ b/index.html
@@ -10,9 +10,25 @@
     <div class="bg-grid"></div>
     <main class="shell">
       <header class="hero panel">
-        <p class="kicker">WORLD FORGE // OC GENESIS CONSOLE</p>
-        <h1>男主初始状态生成器</h1>
-        <p class="muted">左侧选轴，右侧即时给你对应解释卡。至少选 3 项即可生成。</p>
+        <div class="section-head">
+          <div>
+            <p class="kicker">WORLD FORGE // OC GENESIS CONSOLE</p>
+            <h1>男主初始状态生成器</h1>
+            <p class="muted">左侧选轴，右侧即时给你对应解释卡。至少选 3 项即可生成。</p>
+          </div>
+          <label class="theme-picker">
+            主题色
+            <select id="themeSelect">
+              <option value="cyan">霓虹蓝（默认）</option>
+              <option value="green">酸性绿</option>
+              <option value="yellow">电光黄</option>
+              <option value="pink">赛博粉</option>
+              <option value="red">警戒红</option>
+              <option value="purple">虚空紫</option>
+              <option value="orange">熔核橙</option>
+            </select>
+          </label>
+        </div>
       </header>
 
       <div class="layout">
