Make right explain area auto-fill while reserving static principles section

--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
           <div class="section-head">
             <h2>你选中的要素动态解释</h2>
           </div>
-          <article id="selectedExplain" class="selected-explain"></article>
+          <article id="selectedExplain" class="selected-explain selected-explain-live"></article>
 
           <div class="section-head top-gap">
             <h2>设计原则（静态）</h2>
           </div>
-          <article class="selected-explain">
+          <article class="selected-explain selected-explain-static">
             <section class="explain-card">
               <h4>① 轴是自由组合，不是必选题</h4>
               <p>至少选 3 项即可；不需要每个轴都选。你选的不是“正确答案”，而是你要的关系张力。</p>
