Upgrade generation spec for full world+MC POV output and update design principle copy

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
               <p>至少选 3 项即可；不需要每个轴都选。你选的不是“正确答案”，而是你要的关系张力。</p>
             </section>
             <section class="explain-card">
-              <h4>② 先定存在，再定灵魂，再定关系</h4>
-              <p>W/B/P/R 决定世界硬件；M/C/E/J/S 决定人格逻辑；D/V/L/A 决定关系政治学。</p>
+              <h4>② 同样输入也可能生成不同男主</h4>
+              <p>同样的轴选择与补充提示词，也可能产生完全不同但都自洽的男主。本工具每次只给出其中一种高完成度可能性。</p>
             </section>
             <section class="explain-card">
               <h4>③ 生成的是“静态初始态”</h4>
