Add conditional timeline mode by F/X/T/G axes and update principle #3

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
               <p>同样的轴选择与补充提示词，也可能产生完全不同但都自洽的男主。本工具每次只给出其中一种高完成度可能性。</p>
             </section>
             <section class="explain-card">
-              <h4>③ 生成的是“静态初始态”</h4>
-              <p>当前工具不写后续剧情推进、不写轴变化、不写终局，只锚定开场时刻。</p>
+              <h4>③ 是否展开时间线取决于终局相关轴</h4>
+              <p>若未选择 F/X/T/G 等终局相关轴，默认只生成开场静态态；若已选择，则自动升级为“时间线完整、细节留白”的骨架剧本。</p>
             </section>
           </article>
         </aside>
