Show real-time generation mode badge (opening vs timeline) in UI

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <h2>轴选择面板</h2>
             <div class="row-actions">
               <span id="selectedCount" class="chip">已选 0 项</span>
+              <span id="modeBadge" class="chip">模式：开场静态</span>
               <button id="clearBtn" type="button" class="ghost">清空</button>
             </div>
           </div>
