Rebrand to OC命运生成器 and rewrite README for play-first onboarding

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OC Genesis Console</title>
+    <title>OC命运生成器</title>
     <link rel="stylesheet" href="./styles.v5.css" />
   </head>
   <body>
@@ -12,9 +12,9 @@
       <header class="hero panel">
         <div class="section-head">
           <div>
-            <p class="kicker">WORLD FORGE // OC GENESIS CONSOLE</p>
-            <h1>男主初始状态生成器</h1>
-            <p class="muted">左侧选轴，右侧即时给你对应解释卡。至少选 3 项即可生成。</p>
+            <p class="kicker">WORLD FORGE // OC FATE GENERATOR</p>
+            <h1>OC命运生成器</h1>
+            <p class="muted">左侧选轴，右侧即时解释。至少选 3 项即可生成；若包含 F/X/T/G 会自动升级为完整时间线骨架。</p>
           </div>
           <label class="theme-picker">
             主题色
