--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OC命运生成器</title>
-    <link rel="stylesheet" href="./styles.v5.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <div class="bg-grid"></div>
@@ -94,6 +94,6 @@
     </main>
 
     <button id="mobileInsightToggle" class="mobile-toggle">查看解释面板</button>
-    <script src="./app.v5.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
