Add bottom clear action and rename clear buttons to 清空当前选择

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="row-actions top-gap">
             <span id="selectedCount" class="chip">已选 0 项</span>
             <span id="modeBadge" class="chip">模式：开场静态</span>
-            <button id="clearBtn" type="button" class="ghost">清空</button>
+            <button id="clearBtn" type="button" class="ghost">清空当前选择</button>
           </div>
           <div id="axisContainer" class="axis-container"></div>
 
@@ -54,6 +54,7 @@
           <div class="actions">
             <button id="generateBtn" type="button">生成初始剧本</button>
             <button id="regenBtn" type="button" class="ghost">重新生成</button>
+            <button id="clearBtnBottom" type="button" class="ghost">清空当前选择</button>
           </div>
 
           <div class="result-panel">
