--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div class="bg-grid"></div>
+    <div class="side-mosaic side-mosaic-left" aria-hidden="true"></div>
+    <div class="side-mosaic side-mosaic-right" aria-hidden="true"></div>
     <main class="shell">
       <header class="hero panel">
         <div class="section-head">
