Fix binary rain: true vertical falling columns instead of top-row text

--- a/index.html
+++ b/index.html
@@ -8,18 +8,8 @@
   </head>
   <body>
     <div class="bg-grid"></div>
-    <div class="side-rain side-rain-left" aria-hidden="true">
-      <span class="rain-col" style="--speed:11s;--delay:-2s">01010101010101010101</span>
-      <span class="rain-col" style="--speed:14s;--delay:-6s">10100101101001011010</span>
-      <span class="rain-col" style="--speed:10s;--delay:-1s">01011010010110100101</span>
-      <span class="rain-col" style="--speed:13s;--delay:-4s">11001010011001010011</span>
-    </div>
-    <div class="side-rain side-rain-right" aria-hidden="true">
-      <span class="rain-col" style="--speed:12s;--delay:-3s">10101010100101010100</span>
-      <span class="rain-col" style="--speed:15s;--delay:-7s">01100101100101100101</span>
-      <span class="rain-col" style="--speed:10s;--delay:-5s">10010110100101101001</span>
-      <span class="rain-col" style="--speed:13s;--delay:-2s">01001101010011010100</span>
-    </div>
+    <div class="side-rain side-rain-left" id="sideRainLeft" aria-hidden="true"></div>
+    <div class="side-rain side-rain-right" id="sideRainRight" aria-hidden="true"></div>
     <main class="shell">
       <header class="hero panel">
         <div class="section-head">
