Clarify narrative tone vs palette and add harmonious conflict example

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
               <li><strong>关系边界：</strong>可接受/不可接受的亲密行为，嫉妒阈值，占有欲强度，沟通偏好（直说/迂回）。</li>
               <li><strong>权力与互动手感：</strong>谁更主动、谁更掌控、拉扯强度、冲突风格（冷战/爆发/理性谈判）。</li>
               <li><strong>世界与现实约束：</strong>时代背景、阶层差、法律/家族压力、地理环境（城市/边境/废土）。</li>
-              <li><strong>叙事语气：</strong>甜/虐比例、节奏快慢、文风（克制/浓烈/冷峻）、是否允许黑暗元素。</li>
+              <li><strong>叙事语气（文本层，不等于调色板）：</strong>甜/虐比例、节奏快慢、句式密度、情绪强度（克制/浓烈）。若与调色板冲突：调色板决定“世界观与镜头美学”，叙事语气决定“文字表达手感”。</li>
+              <li><strong>冲突可和谐示例：</strong>调色板选「赛博美学」（冷色霓虹、疏离城市）+ 叙事语气选「克制温柔、慢节奏」。结果可呈现为：外部世界冷硬，但人物内心与关系推进是安静且细腻的。</li>
               <li><strong>内容边界（强烈建议写）：</strong>明确雷区与禁写项（如：不要PUA美化、不要怀孕线、不要暴力描写等）。</li>
               <li><strong>开场镜头偏好：</strong>时间（清晨/雨夜）、天气、地点（医院/酒吧/战场）、第一句台词风格。</li>
             </ul>
