Force-clear extra prompt textarea on load/refresh

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </details>
           <label>
             风格/限制
-            <textarea id="extraPrompt" rows="5" placeholder="例：男主27岁，非处男但长期情感封闭；右手虎口有旧伤；声音偏低哑。关系上他外冷内热、占有欲中高，但明确尊重边界。世界是近未来海港城，雨夜开场，避免PUA美化与过度暴力。"></textarea>
+            <textarea id="extraPrompt" rows="5" autocomplete="off" placeholder="例：男主27岁，非处男但长期情感封闭；右手虎口有旧伤；声音偏低哑。关系上他外冷内热、占有欲中高，但明确尊重边界。世界是近未来海港城，雨夜开场，避免PUA美化与过度暴力。"></textarea>
           </label>
 
           <div class="actions">
