feat: stabilize generation pipeline and add live observability (SSE, progress, model/timing info)

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <p id="status" class="muted">等待生成…</p>
 
             <details id="thinkingPanel" class="thinking-panel">
-              <summary id="thinkingSummary">思考过程（生成中）</summary>
+              <summary id="thinkingSummary">系统过程（生成中）</summary>
               <article id="thinkingContent" class="result muted">等待开始…</article>
             </details>
 
