feat(model): switch default pipeline to glm-5 with glm-4.7 fallback

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <section class="panel left">
           <div class="section-head">
             <h2>轴选择面板</h2>
-            <span class="chip">内置模型：MiniMax-M2.5</span>
+            <span class="chip">内置模型：GLM-5（回退 GLM-4.7）</span>
           </div>
 
           <div class="row-actions top-gap">
